[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Первый учебный проект в курсе Хекслета. Набор мини-игр."
authors = ["Parrot7325"]
repository = "https://github.com/Parrot7325/python-project-49"
readme = "README.md"
packages = [
#  { include = "hexlet_code" },
  { include = "brain_games" },
#  { include = "games" },
]


[tool.poetry.dependencies]
python = "^3.9"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even_start:main"
brain-calc = "brain_games.scripts.brain_calc_start:main"
brain-gcd = "brain_games.scripts.brain_gcd_start:main"
brain-progression = "brain_games.scripts.brain_progression_start:main"
brain-prime = "brain_games.scripts.brain_prime_start:main"
